--- a/gs/src/app/globals.css
+++ b/gs/src/app/globals.css
@@ -1,3 +1,49 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Krona+One&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  --azul-claro: #85C1E9;
+  --azul-escuro: #2C3E50;
+  --cor-fundo: #081D2B;
+  --cor-degrade-1: #2ECC71;
+  --cor-degrade-2: #1A5276;
+  --cor-degrade-3: #2471A3;
+
+
+  --fonte-principal: "Montserrat", sans-serif;
+  --fonte-titulo: "Krona One", sans-serif;
+}
+
+*{
+padding: 0;
+margin: 0;
+}
+
+body {
+  @apply bg-[var(--cor-fundo)];
+}
+/* Cabeçalho */
+header {
+    @apply flex items-center text-white pt-[10px] bg-[var(--cor-fundo)];
+    font-family: var(--fonte-principal);
+  }
+  
+  header > h1 {
+    @apply text-[2rem] ml-[30px]; 
+  }
+  
+  header > div {
+    @apply flex items-center ml-[28vw]; 
+  }
+  
+  .icone_conta {
+    @apply transition-transform duration-300 ease-in-out w-[3vw] ml-[33vw];
+  }
+  
+  .icone_conta:hover {
+    @apply scale-110;
+  }
