--- a/gs/src/app/globals.css
+++ b/gs/src/app/globals.css
@@ -117,3 +117,19 @@ footer {
     @apply text-[1.2rem] pt-[20px] text-justify w-[90vw] font-bold text-black;
     font-family: var(--fonte-principal);
   }
+  
+  /*Página de Erro*/
+
+.container_erro {
+  @apply my-[10%] flex flex-col items-center justify-center gap-[10px];
+}
+
+.container_erro > h1 {
+  @apply text-white text-[1.5rem];
+  font-family: var(--fonte-principal);
+}
+
+.container_erro > h2 {
+  @apply text-white text-[1.5rem];
+  font-family: var(--fonte-principal);
+}
