--- a/gs/src/app/globals.css
+++ b/gs/src/app/globals.css
@@ -284,3 +284,54 @@ font-family: var(--fonte-principal);
 .campos_obrigatorios {
   @apply ml-[1%] mt-[1%] text-[#1ABC9C];
 }
+
+/* Conta */
+
+.container_conta {
+  @apply bg-transparent border-[2px] border-[#1ABC9C] m-auto w-[60vw] shadow-[4px_4px_10px_rgba(0,0,0,0.2)];
+}
+
+.container_conta > h1 {
+  @apply text-[2rem] text-[#1ABC9C] text-center font-bold;
+  font-family: var(--fonte-principal);
+}
+
+.container_conta > p {
+  @apply text-[#1ABC9C] text-[1.1rem] ml-[1%];
+  font-family: var(--fonte-principal);
+}
+
+.container_conta > ul {
+  @apply text-[#1ABC9C] text-[1.3rem] ml-[1%] mt-[2%];
+  font-family: var(--fonte-principal);
+}
+
+.container_conta > ul > li {
+  @apply mt-[1%];
+}
+
+.container_conta > ul > li > span {
+  @apply text-white;
+}
+
+.div_botoes_conta {
+  @apply flex gap-[10px] ml-[1%] mt-[2%] mb-[2%];
+}
+
+.botoes_conta {
+  @apply text-[#1ABC9C] bg-transparent border-[2px] border-[#1ABC9C] p-[5px] w-[7vw] relative overflow-hidden z-[1] transition-colors duration-300 ease-in-out shadow-[4px_4px_10px_rgba(0,0,0,0.2)];
+  font-family: var(--fonte-principal);
+}
+
+.botoes_conta::before {
+  content: '';
+  @apply absolute top-full left-0 w-full h-full bg-[#1ABC9C] transition-all duration-300 ease-in-out z-[-1];
+}
+
+.botoes_conta:hover {
+  @apply text-white;
+}
+
+.botoes_conta:hover::before {
+  @apply top-0;
+}
